some of the changs that has been made to the following class